Fix broken link to conference

--- a/services.html
+++ b/services.html
@@ -81,7 +81,7 @@
                                 Software Engineering and Advanced Applications</a>: Finance Chair<br />
                             <a href="https://conf.researchr.org/home/ease-2024" target="blank">28th International Conference on
                                 Evaluation and Assessment in Software Engineering</a>: Finance Chair<br />
-                            <a href="https://dsd-seaa2023.com/seaa/" target="blank">49th Euromicro Conference on
+                            <a href="https://dsd-seaa.com/dsd-seaa-2023-2/" target="blank">49th Euromicro Conference on
                                 Software Engineering and Advanced Applications</a>: Program Chair<br />
                             <a href="http://sattose.org/2023/" target="blank">15th Seminar on Advanced Techniques &
                                 Tools for Software Evolution</a>: Program Chair<br />
