Replace Font Awesome CSS links with script tag for improved loading. Update project page to include preprints.

--- a/projects.html
+++ b/projects.html
@@ -18,9 +18,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
         rel="stylesheet">
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
-    <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/c203d858ce.js" crossorigin="anonymous"></script>
     <link href="img/favicon.ico" rel="icon" type="image/x-icon">
 
     <!-- Custom styles for this template -->
@@ -75,7 +73,8 @@
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
-                        <h4 class="card-title">RECHARGE</h4>
+                        <h4 class="card-title">RECHARGE <a href="https://recharge-project.github.io" target="_blank"><i
+                                    class="fa-regular fa-globe"></i></a></h4>
                         <h6>Funder: MIUR - PRIN: Progetti di Ricerca di Rilevante Interesse Nazionale – Bando 2022 PNRR
                         </h6>
                         <h6>Role: Unit Leader</h6>
@@ -90,14 +89,20 @@
                             pushed.
                             Automated performance testing in CI/CD is still an ongoing effort. RECHARGE is a novel
                             automated framework for automating performance testing in CI/CD pipelines
-                            leveraging static analysis and search-based algorithms. </p>
-                        <!--<p class="card-text"><a href="http://radon-h2020.eu/" target="_blank">Web Site</a></p>-->
+                            leveraging static analysis and search-based algorithms.</p>
+                        <h6>Pre-prints</h6>
+                        <!--<p class="card-text text-justify small"> Trovato, A., De Stefano, M., Pecorelli, F., Di Nucci,
+                            D., & De Lucia, A. (2024). Reformulating Regression Test Suite Optimization using Quantum
+                            Annealing--an Empirical Study. Springer International Journal on Software Tools for
+                            Technology Transfer (STTT), 2024, <a href="preprints/RECHARGE_1.pdf"
+                                target="_blank">link</a>.</p>-->
                     </div>
                 </div>
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
-                        <h4 class="card-title">SMARTITUDE</h4>
+                        <h4 class="card-title">SMARTITUDE <a href="https://smartitude-project.github.io"
+                                target="_blank"><i class="fa-regular fa-globe"></i></a></h4>
                         <h6>Funder: MIUR - PRIN: Progetti di Ricerca di Rilevante Interesse Nazionale – Bando 2022</h6>
                         <h6>Role: Principal Investigator</h6>
                         <p class="card-text text-justify small">Decentralized finance (DeFi) is changing finance, having
@@ -114,7 +119,6 @@
                             Smartitude aims to provide a comprehensive set of software engineering methods and tools to
                             improve the BSC quality assurance by leveraging automated test case generation and formal
                             methods.</p>
-                        <!--<p class="card-text"><a href="http://radon-h2020.eu/" target="_blank">Web Site</a></p>-->
                     </div>
                 </div>
 
@@ -122,7 +126,8 @@
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
-                        <h4 class="card-title">RADON H2020</h4>
+                        <h4 class="card-title">RADON H2020 <a href="http://radon-h2020.eu/" target="_blank"><i
+                                    class="fa-regular fa-globe"></i></a></h4>
                         <h6>Funder: European Union Horizon 2020</h6>
                         <h6>Role: Work Package Leader</h6>
                         <p class="card-text text-justify small">RADON aims at creating a DevOps framework to create and
@@ -137,13 +142,13 @@
                             European software industry. The methodology will strive to tackle complexity, harmonize the
                             abstraction and actuation of action-trigger rules, avoid FaaS lock-in, and optimize
                             decomposition and reuse through model-based FaaS-enabled development and orchestration. </p>
-                        <p class="card-text"><a href="http://radon-h2020.eu/" target="_blank">Web Site</a></p>
                     </div>
                 </div>
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
-                        <h4 class="card-title">SECO-ASSIST 2018-2021</h4>
+                        <h4 class="card-title">SECO-ASSIST 2018-2021 <a href="https://secoassist.github.io/"
+                                target="_blank"><i class="fa-regular fa-globe"></i></a></h4>
                         <h6>Funder: Fonds de la Recherche Scientifique and Fonds voor Wetenschappelijk Onderzoek –
                             Vlaanderen</h6>
                         <h6>Role: Work Package Leader</h6>
@@ -155,13 +160,13 @@
                             social interaction. To achieve this the project partners will combine their expertise in
                             social networks (UMONS), software testing (UAntwerpen), software reuse (VUB) and database
                             evolution (UNamur).</p>
-                        <p class="card-text"><a href="https://secoassist.github.io/" target="_blank">Web Site</a></p>
                     </div>
                 </div>
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
-                        <h4 class="card-title">INTiMALS</h4>
+                        <h4 class="card-title">INTiMALS <a href="http://soft.vub.ac.be/intimals/" target="_blank"><i
+                                    class="fa-regular fa-globe"></i></a></h4>
                         <h6>Funder: Innoviris</h6>
                         <h6>Role: Work Package Leader</h6>
                         <p class="card-text text-justify small">This project’s goal is to research and deploy novel
@@ -177,7 +182,6 @@
                             mines. The success of the modernisation assistant hinges on the quality of the pattern
                             mining algorithms it incorporates and their ability to improve their results by learning
                             from their interaction with the software engineers.</p>
-                        <p class="card-text"><a href="http://soft.vub.ac.be/intimals/" target="_blank">Web Site</a></p>
                     </div>
                 </div>
 
@@ -192,10 +196,8 @@
                             Infrastructure-as-Code, the DevOps practice enabling management and provisioning of
                             infrastructure through the definition of machine-readable files. It is released under the
                             Apache 2.0 license.</p>
-                        <p class="card-text"><a href="https://github.com/radon-h2020/radon-defuse/"
-                                target="_blank">Source Code</a> - <a href="https://www.youtube.com/watch?v=37mmLdCX3jU/"
-                                target="_blank">Video</a>
-                        </p>
+                        <h6><a href="https://github.com/radon-h2020/radon-defuse/" target="_blank">Source Code</a> - <a
+                                href="https://www.youtube.com/watch?v=37mmLdCX3jU/" target="_blank">Video</a></h6>
                     </div>
                 </div>
 
@@ -207,11 +209,10 @@
                             prediction.RepoMiner automatically collects failure data from software components, labels
                             them as failure-prone or neutral, and calculates metrics to be used as ground truth for
                             defect prediction models. It is released under the Apache 2.0 license.</p>
-                        <p class="card-text"><a href="https://github.com/radon-h2020/radon-repository-miner"
+                        <h6><a href="https://github.com/radon-h2020/radon-repository-miner"
                                 target="_blank">Source Code</a> - <a
                                 href="https://radon-h2020.github.io/radon-repository-miner/"
-                                target="_blank">Documentation</a>
-                        </p>
+                                target="_blank">Documentation</a></h6>
                     </div>
                 </div>
 
@@ -223,11 +224,10 @@
                             it could be easily extended to support additional formats. AnsibleMetrics represents a step
                             forward towards software quality support for DevOps engineers developing and maintaining
                             infrastructure code. It is released under the Apache 2.0 license.</p>
-                        <p class="card-text"><a href="https://github.com/radon-h2020/radon-ansible-metrics"
+                        <h6><a href="https://github.com/radon-h2020/radon-ansible-metrics"
                                 target="_blank">Source Code</a> - <a
                                 href="https://radon-h2020.github.io/radon-ansible-metrics"
-                                target="_blank">Documentation</a>
-                        </p>
+                                target="_blank">Documentation</a></h6>
                     </div>
                 </div>
 
@@ -237,8 +237,8 @@
                         <p class="card-text text-justify small">SoCRATES is an IntelliJ IDEA plugin to detect test
                             smells in Scala/SBT projects. It automatically detects and reports on six test smells
                             including four variants of General Fixture. It is released under the MIT license.</p>
-                        <p class="card-text"><a href="https://github.com/jonas-db/socrates" target="_blank">Source
-                                Code</a>
+                            <h6><a href="https://github.com/jonas-db/socrates" target="_blank">Source
+                                Code</a></h6>
                         </p>
                     </div>
                 </div>
@@ -249,10 +249,10 @@
                         <p class="card-text text-justify small">aDoctor is an IntellJ IDEA plugin to detect and refactor
                             five Android-specific code smells that impact the energy consumption of these applications.
                             It is released under the MIT license.</p>
-                        <p class="card-text"><a href="https://plugins.jetbrains.com/plugin/13443-adoctor"
+                            <h6><a href="https://plugins.jetbrains.com/plugin/13443-adoctor"
                                 target="_blank">Plugin</a> - <a href="https://github.com/emaiannone/aDoctor"
                                 target="_blank">Source Code</a> - <a href="https://www.youtube.com/watch?v=1c2EhVXiKis"
-                                target="_blank">Video</a></p>
+                                target="_blank">Video</a></h6>
                     </div>
                 </div>
 
@@ -262,8 +262,8 @@
                         <p class="card-text text-justify small">PETrA is a software able to estimate the energy
                             consumption of method calls in Android apps. It is based on some Android tools that are
                             Monkey, Batterystats, Systrace, and dmtracedump.</p>
-                        <p class="card-text"><a href="http://tinyurl.com/je2nxkd" target="_blank">Web Site</a> - <a
-                                href="https://www.youtube.com/watch?v=1rrFPDMIBbI" target="_blank">Video</a></p>
+                            <h6><a href="https://github.com/dardin88/PETrA" target="_blank">Repo</a> - <a
+                                href="https://www.youtube.com/watch?v=1rrFPDMIBbI" target="_blank">Video</a></h6>
                     </div>
                 </div>
 
@@ -271,8 +271,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Landfill</h4>
                         <p class="card-text text-justify small">Landfill is a code smell dataset.</p>
-                        <p class="card-text"><a href="https://zenodo.org/records/6080422" target="_blank">Web Site</a>
-                        </p>
+                        <h6><a href="https://zenodo.org/records/6080422" target="_blank">Data</a></h6>
                     </div>
                 </div>
 
@@ -280,21 +279,20 @@
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
-                        <h4 class="card-title">Gnome Maps</h4>
-                        <p class="card-text text-justify small">Gnome Maps is a map application for GNOME.
-                        <p class="card-text"><a href="https://wiki.gnome.org/Apps/Maps" target="_blank">Web Site</a>
-                        </p>
+                        <h4 class="card-title">Gnome Maps <a href="https://wiki.gnome.org/Apps/Maps" target="_blank"><i
+                                    class="fa-regular fa-globe"></i></a></h4>
+                        <p class="card-text text-justify small">Gnome Maps is a map application for GNOME.</p>
                     </div>
                 </div>
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
-                        <h4 class="card-title">GraphHopper</h4>
+                        <h4 class="card-title">GraphHopper <a href="https://graphhopper.com" target="_blank"><i
+                                    class="fa-regular fa-globe"></i></a></h4>
                         <p class="card-text text-justify small">GraphHopper offers memory efficient algorithms in Java
                             for routing on graphs. E.g. Dijkstra and A* but also optimized road routing algorithms like
                             Contraction Hierarchies. It stands under the Apache License and is build on a large test
-                            suite.
-                        <p class="card-text"><a href="https://graphhopper.com" target="_blank">Web Site</a></p>
+                            suite.</p>
                     </div>
                 </div>
 
