--- a/publications.html
+++ b/publications.html
@@ -18,9 +18,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
         rel="stylesheet">
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
-    <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/c203d858ce.js" crossorigin="anonymous"></script>
     <link href="img/favicon.ico" rel="icon" type="image/x-icon" >
 
     <!-- Custom styles for this template -->
