Uncomment pre-print reference in projects.html
Add STTT paper

--- a/projects.html
+++ b/projects.html
@@ -91,11 +91,11 @@
                             automated framework for automating performance testing in CI/CD pipelines
                             leveraging static analysis and search-based algorithms.</p>
                         <h6>Pre-prints</h6>
-                        <!--<p class="card-text text-justify small"> Trovato, A., De Stefano, M., Pecorelli, F., Di Nucci,
+                        <p class="card-text text-justify small"> Trovato, A., De Stefano, M., Pecorelli, F., Di Nucci,
                             D., & De Lucia, A. (2024). Reformulating Regression Test Suite Optimization using Quantum
                             Annealing--an Empirical Study. Springer International Journal on Software Tools for
                             Technology Transfer (STTT), 2024, <a href="preprints/RECHARGE_1.pdf"
-                                target="_blank">link</a>.</p>-->
+                                target="_blank">link</a>.</p>
                     </div>
                 </div>
 
