Add ICST 2025 Tool Demo

--- a/projects.html
+++ b/projects.html
@@ -96,6 +96,10 @@
                             Annealing--an Empirical Study. Springer International Journal on Software Tools for
                             Technology Transfer (STTT), 2024, <a href="preprints/RECHARGE_1.pdf"
                                 target="_blank">link</a>.</p>
+                        <p class="card-text text-justify small"> Trovato, A., Traini L., Di Menna F., & Di Nucci,
+                            D. (2024). AMBER: Ai-Enabled Java Microbenchmark Harness. 18th IEEE International Conference
+                            on Software Testing, Verification and Validation (ICST 2025), Naples, Italy, 2025, to appear,
+                            <a href="preprints/RECHARGE_2.pdf" target="_blank">link</a>.</p>
                     </div>
                 </div>
 
@@ -209,9 +213,8 @@
                             prediction.RepoMiner automatically collects failure data from software components, labels
                             them as failure-prone or neutral, and calculates metrics to be used as ground truth for
                             defect prediction models. It is released under the Apache 2.0 license.</p>
-                        <h6><a href="https://github.com/radon-h2020/radon-repository-miner"
-                                target="_blank">Source Code</a> - <a
-                                href="https://radon-h2020.github.io/radon-repository-miner/"
+                        <h6><a href="https://github.com/radon-h2020/radon-repository-miner" target="_blank">Source
+                                Code</a> - <a href="https://radon-h2020.github.io/radon-repository-miner/"
                                 target="_blank">Documentation</a></h6>
                     </div>
                 </div>
@@ -224,9 +227,8 @@
                             it could be easily extended to support additional formats. AnsibleMetrics represents a step
                             forward towards software quality support for DevOps engineers developing and maintaining
                             infrastructure code. It is released under the Apache 2.0 license.</p>
-                        <h6><a href="https://github.com/radon-h2020/radon-ansible-metrics"
-                                target="_blank">Source Code</a> - <a
-                                href="https://radon-h2020.github.io/radon-ansible-metrics"
+                        <h6><a href="https://github.com/radon-h2020/radon-ansible-metrics" target="_blank">Source
+                                Code</a> - <a href="https://radon-h2020.github.io/radon-ansible-metrics"
                                 target="_blank">Documentation</a></h6>
                     </div>
                 </div>
@@ -237,7 +239,7 @@
                         <p class="card-text text-justify small">SoCRATES is an IntelliJ IDEA plugin to detect test
                             smells in Scala/SBT projects. It automatically detects and reports on six test smells
                             including four variants of General Fixture. It is released under the MIT license.</p>
-                            <h6><a href="https://github.com/jonas-db/socrates" target="_blank">Source
+                        <h6><a href="https://github.com/jonas-db/socrates" target="_blank">Source
                                 Code</a></h6>
                         </p>
                     </div>
@@ -249,10 +251,9 @@
                         <p class="card-text text-justify small">aDoctor is an IntellJ IDEA plugin to detect and refactor
                             five Android-specific code smells that impact the energy consumption of these applications.
                             It is released under the MIT license.</p>
-                            <h6><a href="https://plugins.jetbrains.com/plugin/13443-adoctor"
-                                target="_blank">Plugin</a> - <a href="https://github.com/emaiannone/aDoctor"
-                                target="_blank">Source Code</a> - <a href="https://www.youtube.com/watch?v=1c2EhVXiKis"
-                                target="_blank">Video</a></h6>
+                        <h6><a href="https://plugins.jetbrains.com/plugin/13443-adoctor" target="_blank">Plugin</a> - <a
+                                href="https://github.com/emaiannone/aDoctor" target="_blank">Source Code</a> - <a
+                                href="https://www.youtube.com/watch?v=1c2EhVXiKis" target="_blank">Video</a></h6>
                     </div>
                 </div>
 
@@ -262,7 +263,7 @@
                         <p class="card-text text-justify small">PETrA is a software able to estimate the energy
                             consumption of method calls in Android apps. It is based on some Android tools that are
                             Monkey, Batterystats, Systrace, and dmtracedump.</p>
-                            <h6><a href="https://github.com/dardin88/PETrA" target="_blank">Repo</a> - <a
+                        <h6><a href="https://github.com/dardin88/PETrA" target="_blank">Repo</a> - <a
                                 href="https://www.youtube.com/watch?v=1rrFPDMIBbI" target="_blank">Video</a></h6>
                     </div>
                 </div>
