--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@
                             I am a member at large of the <a
                                 href="https://www.computer.org/volunteering/boards-and-committees/technical-activities">IEEE
                                 Conference Activities Committee</a>.<br />
-                            I serve as editor for ACM Transactions on Software Engineering and Methodology, Elsevier
-                            Journal of Systems and Software and Elsevier Science of
-                            Computer Programming, and I am an <a
+                            I serve as editor for ACM Transactions on Software Engineering and Methodology and Elsevier
+                            Journal of Systems and Software, and I am an <a
                                 href="https://www.computer.org/csdl/magazine/so/about/13611?title=Initiatives%20Team&periodical=IEEE%20Software">IEEE
                                 Software initiative team member</a>.<br />
                             I am a program committee member of international conferences and a referee for international
