Remove FullCV.pdf link and update teaching and services pages

--- a/services.html
+++ b/services.html
@@ -122,11 +122,11 @@
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
-                        <h4 class="card-title">Program Committee Member of International Conferences and Workshops
-                            (Research Track)</h4>
+                        <h4 class="card-title">Program Committee Member of International Conferences (Research Track)</h4>
                         <p class="card-text text-justify small">
                             ACM Joint European Software Engineering Conference and Symposium on the Foundations of
-                            Software Engineering (ESEC/FSE): 2025, 2024<br />
+                            Software Engineering (ESEC/FSE): 2026, 2025, 2024<br />
+                            IEEE/ACM International Conference on Software Engineering - New Ideas and Emerging Results (ICSE-NIER): 2026<br />
                             IEEE/ACM International Conference on Software Engineering - Software Engineering
                             in Practice Track (ICSE-SEIP): 2025, 2023<br />
                             IEEE/ACM International Conference on Mining Software Repositories (MSR): 2025, 2024, 2023,
@@ -144,13 +144,6 @@
                             European Conference on Service-Oriented and Cloud Computing (ESOCC): 2023<br />
                             IEEE/ACM International Conference on Mobile Software Engineering and Systems
                             (MOBILESoft): 2023, 2022, 2021<br />
-                            International Workshop on ENgineering Intelligent Applications' Code: 2023<br />
-                            International Workshop on Machine Learning Techniques for Software Quality Evaluation
-                            (MaLTeSQuE): 2022, 2021, 2020, 2019, 2018<br />
-                            International Workshop on Quantum Programming for Software Engineering (QP4SE): 2022<br />
-                            International Workshop on Software Health (SoHeal): 2021<br />
-                            International Workshop on Cloud-Native Applications Design and Experience (CNAX): 2019,
-                            2018<br />
                         </p>
                     </div>
                 </div>
