--- a/teaching.html
+++ b/teaching.html
@@ -86,46 +86,58 @@
                             </thead>
                             <tbody>
                                 <tr></tr>
-                                    <td>Software Dependability</td>
-                                    <td>MSc</td>
+                                <td>Software Dependability</td>
+                                <td>MSc in Computer Science</td>
+                                <td>University of Salerno</td>
+                                <td>Fall 2025<br />
+                                    Fall 2024<br />
+                                    Fall 2023<br />
+                                    Spring 2023<br />
+                                    Spring 2022 with <a href="https://fpalomba.github.io/" target="blank">F.
+                                        Palomba</a>
+                                </td>
+                                </tr>
+                                <tr>
+                                    <td>Sustainable Software Engineering</td>
+                                    <td>MSc in Computer Science</td>
                                     <td>University of Salerno</td>
-                                    <td>Fall 2024 (course holder)<br />
-                                        Fall 2023 (course holder)<br />
-                                        Spring 2023 (course holder)<br />
-                                        Spring 2022 (course holder: <a href="https://fpalomba.github.io/"
-                                            target="blank">F. Palomba</a>)
+                                    <td>Fall 2025 with <a href="https://docenti.unisa.it/033024/home"
+                                            target="blank">G. Catolino</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Software Engineering for Secure Cloud Systems</td>
-                                    <td>MSc</td>
+                                    <td>MSc in Cyber-security and Cloud Technologies</td>
                                     <td>University of Salerno</td>
-                                    <td>Spring 2025 (course holder: <a href="https://docenti.unisa.it/033024/home"
-                                            target="blank">G. Catolino)</a><br />
-                                        Spring 2024 (course holder: <a href="https://docenti.unisa.it/004724/home"
-                                            target="blank">C. Gravino</a>)
+                                    <td>Spring 2026 with <a href="https://docenti.unisa.it/033024/home"
+                                            target="blank">G. Catolino</a><br />
+                                        Spring 2025 with <a href="https://docenti.unisa.it/033024/home"
+                                            target="blank">G. Catolino</a><br />
+                                        Spring 2024 with <a href="https://docenti.unisa.it/004724/home"
+                                            target="blank">C. Gravino</a> and <a href="https://docenti.unisa.it/033024/home"
+                                            target="blank">G. Catolino</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Object Oriented Programming</td>
-                                    <td>BSc</td>
+                                    <td>BSc in Computer Science</td>
                                     <td>University of Salerno</td>
-                                    <td>Fall 2024 (course holder: <a href="https://docenti.unisa.it/005087/en/home"
-                                        target="blank">V. Deufemia</a>)<br />
-                                        Fall 2023 (course holder: <a href="https://docenti.unisa.it/005087/en/home"
-                                            target="blank">V. Deufemia</a>)<br />
-                                        Fall 2022 (course holder: <a href="https://docenti.unisa.it/005087/en/home"
-                                            target="blank">V. Deufemia</a>)
+                                    <td>Fall 2025 with <a href="https://docenti.unisa.it/005087/en/home"
+                                            target="blank">V. Deufemia</a><br />
+                                        Fall 2024 with <a href="https://docenti.unisa.it/005087/en/home"
+                                            target="blank">V. Deufemia</a><br />
+                                        Fall 2023 with <a href="https://docenti.unisa.it/005087/en/home"
+                                            target="blank">V. Deufemia</a><br />
+                                        Fall 2022 with <a href="https://docenti.unisa.it/005087/en/home"
+                                            target="blank">V. Deufemia</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>Funding and Management of Research Projects</td>
-                                    <td>PhD</td>
+                                    <td>International School</td>
+                                    <td>MSc in Cyber-security and Cloud Technologies</td>
                                     <td>University of Salerno</td>
-                                    <td>Winter 2024 (course holder)<br />
-                                        Winter 2023 (co-lectured with <a href="https://docenti.unisa.it/003241/en/home"
-                                            target="blank">A. De
-                                            Lucia</a>)
+                                    <td>Spring 2026 with Prof. C. De Maio, Prof. V. Scarano, and Prof. V.
+                                        Deufemia</a>
                                     </td>
                                 </tr>
                             </tbody>
@@ -151,61 +163,75 @@
                             <tbody>
                                 <tr>
                                     <td>Empirical Research Methods</td>
-                                    <td>PhD</td>
+                                    <td>PhD in Coomputer Science</td>
                                     <td>University of Salerno</td>
-                                    <td>Summer 2023 (co-lectured with <a
-                                            href="https://fpalomba.github.io/" target="blank">F. Palomba</a>)
+                                    <td>Summer 2025 with <a href="https://docenti.unisa.it/004724/home"
+                                            target="blank">C. Gravino</a><br />
+                                        Summer 2023 with <a href="https://fpalomba.github.io/"
+                                            target="blank">F. Palomba</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Funding and Management of Research Projects</td>
+                                    <td>PhD in Coomputer Science</td>
+                                    <td>University of Salerno</td>
+                                    <td>Winter 2024<br />
+                                        Winter 2023 with <a href="https://docenti.unisa.it/003241/en/home"
+                                            target="blank">A. De Lucia</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Software Engineering, Management, and Evolution</td>
-                                    <td>MSc</td>
+                                    <td>MSc in Computer Science</td>
                                     <td>University of Salerno</td>
-                                    <td>Spring 2022 (course holder: <a href="https://docenti.unisa.it/003241/en/home"
-                                            target="blank">A. De Lucia</a>)
+                                    <td>Spring 2022 with <a href="https://docenti.unisa.it/003241/en/home"
+                                            target="blank">A. De Lucia</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Data Engineering</td>
-                                    <td>MSc</td>
+                                    <td>MSc in Data Science in Business & Entrepreneurship</td>
                                     <td>Jheronimus Academy of Data Science</td>
-                                    <td>Fall 2021 (course holder: <a
+                                    <td>Fall 2021 with <a
                                             href="https://scholar.google.it/citations?user=13xdkw4AAAAJ&hl=en"
-                                            target="blank"> W.J. van den Heuvel</a>)
-                                        <br />Fall 2020 (course holder: <a
+                                            target="blank"> W. J. van den Heuvel</a>, <a href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
+                                            target="blank">D. A. Tamburri</a>, and <a href="https://scholar.google.com/citations?user=IfiRc9MAAAAJ&hl=en"> Indika Priyantha Kumara Weerasingha Dewage</a>
+                                        <br />Fall 2020 with <a
                                             href="https://scholar.google.it/citations?user=13xdkw4AAAAJ&hl=en"
-                                            target="blank"> W.J. van den Heuvel</a>)
+                                            target="blank"> W. J. van den Heuvel</a>, <a href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
+                                            target="blank">D. A. Tamburri</a>, and <a href="https://scholar.google.com/citations?user=IfiRc9MAAAAJ&hl=en"> Indika Priyantha Kumara Weerasingha Dewage</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Introduction to Machine Learning</td>
-                                    <td>Pre-MSc</td>
+                                    <td>Pre-MSc in Data Science in Business and Entrepreneurship</td>
                                     <td>Jheronimus Academy of Data Science</td>
-                                    <td>Spring 2021 (course holder)<br />
-                                        Spring 2020 (course holder:
+                                    <td>Spring 2021 with <a href="https://docenti.unisa.it/033024/home"
+                                            target="blank">G. Catolino</a><br />
+                                        Spring 2020 with
                                         <a href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
-                                            target="blank">D.A. Tamburri</a>)
+                                            target="blank">D. A. Tamburri</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Capita Selecta of Software Engineering</td>
-                                    <td>MSc</td>
+                                    <td>MSc in Computer Science</td>
                                     <td>Vrije Universiteit Brussel</td>
-                                    <td>2019/20 (yearly course, course holder: <a
+                                    <td>2019/20 yearly course with <a
                                             href="http://soft.vub.ac.be/~cderoove/" target="blank">C. De
-                                            Roover</a>)
-                                        <br /> 2018/19 (yearly course, course holder: <a
+                                            Roover</a>
+                                        <br /> 2018/19 yearly course with <a
                                             href="http://soft.vub.ac.be/~cderoove/" target="blank">C. De
-                                            Roover</a>)
+                                            Roover</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Data Statistics</td>
-                                    <td>BSc</td>
+                                    <td>BSc in Data Science</td>
                                     <td>Tilburg University</td>
-                                    <td>Fall 2019 (course holder: <a
+                                    <td>Fall 2019 with <a
                                             href="https://www.tilburguniversity.edu/nl/medewerkers/m-c-kaptein"
-                                            target="blank"> M.C. Kaptein</a>)</td>
+                                            target="blank"> M.C. Kaptein</a></td>
                                 </tr>
                             </tbody>
                         </table>
