--- a/projects.html
+++ b/projects.html
@@ -90,16 +90,6 @@
                             Automated performance testing in CI/CD is still an ongoing effort. RECHARGE is a novel
                             automated framework for automating performance testing in CI/CD pipelines
                             leveraging static analysis and search-based algorithms.</p>
-                        <h6>Pre-prints</h6>
-                        <p class="card-text text-justify small"> Trovato, A., De Stefano, M., Pecorelli, F., Di Nucci,
-                            D., & De Lucia, A. (2024). Reformulating Regression Test Suite Optimization using Quantum
-                            Annealing--an Empirical Study. Springer International Journal on Software Tools for
-                            Technology Transfer (STTT), 2024, <a href="preprints/RECHARGE_1.pdf"
-                                target="_blank">link</a>.</p>
-                        <p class="card-text text-justify small"> Trovato, A., Traini L., Di Menna F., & Di Nucci,
-                            D. (2024). AMBER: Ai-Enabled Java Microbenchmark Harness. 18th IEEE International Conference
-                            on Software Testing, Verification and Validation (ICST 2025), Naples, Italy, 2025, to appear,
-                            <a href="preprints/RECHARGE_2.pdf" target="_blank">link</a>.</p>
                     </div>
                 </div>
 
@@ -190,6 +180,23 @@
                 </div>
 
                 <h2 class="mt-5 mb-2">Tools</h2>
+
+                <div class="card card-horizontal mb-2">
+                    <div class="card-body">
+                        <h4 class="card-title">MuSe</h4>
+                        <p class="card-text text-justify small">MuSe is a mutation-based tool for generating benchmarks by injecting vulnerabilities into smart contracts. It features 6 mutation operators to inject vulnerabilities. MuSe is based on a mutation testing tool called SuMo, which was designed to run mutation testing on Solidity projects in a NodeJS environment. It can run test using Truffle, Hardhat, Brownie and Forge. If needed, SuMo can also automatically spawn Ganache instances to guarantee a clean-room testing environment between mutants. It is released under the GPL v3.0 License.</p>
+                        <h6><a href="https://github.com/GerardoIuliano/MuSe" target="_blank">Source Code</a></h6>
+                    </div>
+                </div>
+
+                <div class="card card-horizontal mb-2">
+                    <div class="card-body">
+                        <h4 class="card-title">AMBER</h4>
+                        <p class="card-text text-justify small">AMBER is an AI-enabled extension of JMH that leverages Time Series Classification algorithms to predict the beginning of the steady-state phase at run-time and dynamically halt warm-up iterations accordingly. It is released under the MIT License.</p>
+                        <h6><a href="https://github.com/AntonioTrovato/AMBER" target="_blank">Source Code</a> - <a
+                                href="https://www.youtube.com/watch?v=7zOngDQ1z_k" target="_blank">Video</a></h6>
+                    </div>
+                </div>
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
