--- a/projects.html
+++ b/projects.html
@@ -184,7 +184,7 @@
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
                         <h4 class="card-title">MuSe</h4>
-                        <p class="card-text text-justify small">MuSe is a mutation-based tool for generating benchmarks by injecting vulnerabilities into smart contracts. It features 6 mutation operators to inject vulnerabilities. MuSe is based on a mutation testing tool called SuMo, which was designed to run mutation testing on Solidity projects in a NodeJS environment. It can run test using Truffle, Hardhat, Brownie and Forge. If needed, SuMo can also automatically spawn Ganache instances to guarantee a clean-room testing environment between mutants. It is released under the GPL v3.0 License.</p>
+                        <p class="card-text text-justify small">MuSe is a mutation-based tool for generating benchmarks by injecting vulnerabilities into smart contracts. It features six mutation operators to inject vulnerabilities. MuSe is based on a mutation testing tool called SuMo, which was designed to run mutation testing on Solidity projects in a NodeJS environment. It can run test using Truffle, Hardhat, Brownie and Forge. If needed, SuMo can also automatically spawn Ganache instances to guarantee a clean-room testing environment between mutants. It is released under the GPL v3.0 License.</p>
                         <h6><a href="https://github.com/GerardoIuliano/MuSe" target="_blank">Source Code</a></h6>
                     </div>
                 </div>
